trying to fix gaps

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     box-sizing: border-box;
     text-align: left;
     font-family: Helvetica;
+    padding: 0px 0px;
 }
 
 
